--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@
 ## User settings
 xcuserdata/
 
+# Mac
+.DS_Store
+
 ## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
 *.xcscmblueprint
 *.xccheckout
