--- a/Ssok/Info.plist
+++ b/Ssok/Info.plist
@@ -5,7 +5,7 @@
 	<key>UILaunchScreen</key>
 	<dict>
 		<key>UIImageName</key>
-		<string>Splash</string>
+		<string>splash</string>
 	</dict>
 </dict>
 </plist>
